test/good/clocks.ept
node f(x:bool) returns (y:bool)
let
  y = x when x
tel
