test/bad/clock_annot2.ept
node f(x:int) returns (y:int on ck; ck:bool)
let
  ck = true;
  y = (x :: ck)
tel

